# paperinfo_crawler

./: LICENSE  README.md  main.py  pyproject.toml  requirements-no-version.txt  requirements.txt
src/: conf.py  dblp.py  entry_acm.py  entry_acm_conf.py  entry_elsevier.py  entry_ieee.py  entry_iospress.py  entry_ndss.py  entry_ndss_conf.py  entry_springer.py  entry_springer_conf.py  entry_usenix.py  entry_usenix_conf.py  entry_vldb.py  get_abstract_base.py  main.py  request_wrap.py  settings.py
